--- a/BattleSea/Content/Site.css
+++ b/BattleSea/Content/Site.css
@@ -1,17 +1,106 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-}
+﻿        body, html {
+            padding: 0;
+            margin: 0;
+            color: #595959;
+            font-family: Roboto;
+        }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-}
+        .battle {
+            overflow: hidden;
+        }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
+        .section {
+            width: 50%;
+            height: 600px;
+            float: left;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .battlefield-cell {
+            position: absolute;
+            background-color: #eee;
+            border: 1px solid #fff;
+        }
+
+            /* Ship Deck */
+            .battlefield-cell[data-value='1'] {
+                background-color: #2e9f76;
+            }
+
+            /* Shot */
+            .battlefield-cell[data-value='2'], .battlefield-cell[data-value='5'] {
+                background-color: #5b6461;
+            }
+
+            /* Exploded */
+
+            .battlefield-cell[data-value='3'] {
+                background-color: #e15969;
+            }
+
+            /*#mine {
+            padding: 20px;
+        }*/
+
+            .battlefield-cell[data-value='4'] {
+                background-color: #d1e8ff;
+            }
+
+        .fieldArea {
+            width: 100%;
+            height: 100%;
+            padding: 40px;
+            position: absolute;
+            overflow: hidden;
+            box-sizing: border-box;
+        }
+
+        .span-button {
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            cursor: pointer;
+            display: block;
+            border: 1px solid #cccccc;
+            padding: 6px;
+            border-radius: 4px;
+            font-weight: 500;
+        }
+
+            .span-button:hover {
+                background-color: #ccc;
+                color: white;
+                border: none;
+            }
+
+        .whom-label {
+            position: absolute;
+            top: 5px;
+            display: block;
+            width: 100%;
+            text-align: center;
+            font-weight: 900;
+            font-size: 25px;
+        }
+
+        .tr-mesh {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            z-index: 55;
+            -webkit-transition: all linear 0.5s;
+            transition: all linear 0.5s;
+            background-color: rgba(0, 0, 0, 0.3);
+        }
+
+        .cell-selectable {
+            cursor: pointer;
+        }
+
+            .cell-selectable:hover {
+                opacity: 0.6;
+            }
