--- a/BattleSea/Views/Game/Index.cshtml
+++ b/BattleSea/Views/Game/Index.cshtml
@@ -4,114 +4,7 @@
 <html>
 <head>
     <title>Sea Battle</title>
-    <style type="text/css">
-        body, html {
-            padding: 0;
-            margin: 0;
-            color: #595959;
-            font-family: Roboto;
-        }
-
-        .battle {
-            overflow: hidden;
-        }
-
-        .section {
-            width: 50%;
-            height: 600px;
-            float: left;
-            overflow: hidden;
-            position: relative;
-        }
-
-        .battlefield-cell {
-            position: absolute;
-            background-color: #eee;
-            border: 1px solid #fff;
-        }
-
-            /* Ship Deck */
-            .battlefield-cell[data-value='1'] {
-                background-color: #2e9f76;
-            }
-
-            /* Shot */
-            .battlefield-cell[data-value='2'], .battlefield-cell[data-value='5'] {
-                background-color: #5b6461;
-            }
-
-            /* Exploded */
-
-            .battlefield-cell[data-value='3'] {
-                background-color: #e15969;
-            }
-
-            /*#mine {
-            padding: 20px;
-        }*/
-
-            .battlefield-cell[data-value='4'] {
-                background-color: #d1e8ff;
-            }
-
-        .fieldArea {
-            width: 100%;
-            height: 100%;
-            padding: 40px;
-            position: absolute;
-            overflow: hidden;
-            box-sizing: border-box;
-        }
-
-        .span-button {
-            -webkit-touch-callout: none;
-            -webkit-user-select: none;
-            -khtml-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-            cursor: pointer;
-            display: block;
-            border: 1px solid #cccccc;
-            padding: 6px;
-            border-radius: 4px;
-            font-weight: 500;
-        }
-
-            .span-button:hover {
-                background-color: #ccc;
-                color: white;
-                border: none;
-            }
-
-        .whom-label {
-            position: absolute;
-            top: 5px;
-            display: block;
-            width: 100%;
-            text-align: center;
-            font-weight: 900;
-            font-size: 25px;
-        }
-
-        .tr-mesh {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            z-index: 55;
-            -webkit-transition: all linear 0.5s;
-            transition: all linear 0.5s;
-            background-color: rgba(0, 0, 0, 0.3);
-        }
-
-        .cell-selectable {
-            cursor: pointer;
-        }
-
-            .cell-selectable:hover {
-                opacity: 0.6;
-            }
-    </style>
+    <link href="~/Content/Site.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,500italic,700italic,700,900,900italic,300italic,300,100italic,100" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
@@ -166,7 +59,9 @@
     <div ng-show="model.State == 2" style="position: fixed; width: 100%; height: 100%; top: 0; left: 0; background-color: rgba(255,255, 255, 0.5);">
         <span style="font-size: 18px; position: absolute; top: 50%; width: 100%; text-align: center;">Game over!<br />You {{gameOverResultWord}}!</span>
     </div>
-
+    <div style="position: fixed; bottom: 0; right: 0; width: 300px; height: 200px; padding: 15px;">
+        Games: @ViewBag.NumberOfGames, Players: @ViewBag.NumberOfPlayers
+    </div>
     <script type="text/javascript">
 
         var battleSea = angular.module("battleSea", []);
